--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,16 @@
 
-@import 'base/normalize';
-@import 'base/general';
+@import 'base/variables';
 @import 'base/palette';
+@import 'base/normalize';
+@import 'base/mixins';
+@import 'base/general';
+@import 'base/utilities';
+
+// Layout
+@import 'layout/grid';
 
 // Components
 @import 'components/header';
 @import 'components/hero';
 @import 'components/button';
+@import 'components/before-after';
