--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -1,10 +1,44 @@
 .hero {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 4rem);
+    height: 51rem;
+    background: url(img/hero-bg.jpg) no-repeat center;
+    background-size: cover;
 
     &__content {
         margin: auto;
-        width: 117rem;
+        padding: 0 6.5rem;
+        width: 100%;
+        max-width: 117rem;
+        text-align: center;
+
+        @include bp(SM) {
+            text-align: left;
+        }
+    }
+
+    &__text {
+        display: block;
+        margin: 3rem 0;
+        text-align: center;
+
+        @include bp(SM) {
+            max-width: 70%;
+            text-align: left;
+        }
+
+        & > span {
+            display: inline-block;
+            margin: 0 0 0.6rem;
+            padding: .5rem 2rem;
+            font-size: 3rem;
+            line-height: 1.2em;
+            font-weight: 700;
+            background: $white;
+
+            @include bp(SM) {
+                font-size: 4.6rem;
+            }
+        }
     }
 }
