--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+@import "https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css";
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 button, hr, input {
   overflow: visible; }
@@ -118,19 +120,15 @@ body {
   font-family: 'Rubik', sans-serif;
   font-size: 10px; }
 
-h1,
-h2,
-h3 {
-  text-align: center; }
-
 h2 {
-  font-size: 3rem;
-  line-height: 1.3em; }
-
-h3 {
+  margin: 5rem 0;
   font-size: 3rem;
   line-height: 1.3em;
-  color: #fcd700; }
+  text-transform: uppercase; }
+
+h3 {
+  font-size: 3rem;
+  line-height: 1.3em; }
 
 p {
   margin: 2rem 0;
@@ -143,7 +141,7 @@ p {
   max-width: 120rem; }
   @media (min-width: 769px) {
     .container {
-      padding: 5.5rem 6.5rem; } }
+      padding: 6rem 6.5rem; } }
 
 .u-txt-center {
   text-align: center; }
@@ -156,6 +154,9 @@ p {
 
 .u-mb2 {
   margin-bottom: 2rem; }
+
+.u-mb4 {
+  margin-bottom: 4rem; }
 
 .u-mb5 {
   margin-bottom: 5rem; }
@@ -172,6 +173,69 @@ p {
 .u-mt2 {
   margin-top: 2rem; }
 
+.u-mt3 {
+  margin-top: 3rem; }
+
+.u-pt0 {
+  padding-top: 0 !important; }
+
+.u-pb0 {
+  padding-bottom: 0 !important; }
+
+.u-bg-black {
+  background-color: #000; }
+
+.u-bg-yellow {
+  background-color: #fcd700; }
+
+.u-color-yellow {
+  color: #fcd700; }
+
+.u-color-white {
+  color: #fff; }
+
+.u-border-b3 {
+  position: relative;
+  display: inline-block; }
+  .u-border-b3::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0.3rem;
+    background: #000; }
+
+.u-border-w3 {
+  position: relative;
+  display: inline-block; }
+  .u-border-w3::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 3px;
+    background: #fff; }
+
+.u-modal-visible {
+  overflow: hidden; }
+
+.heading {
+  font-size: 3rem; }
+  .heading--small {
+    font-size: 2.3rem; }
+
+.subHeading {
+  font-size: 2.2rem; }
+  .subHeading--large {
+    font-size: 3rem; }
+  .subHeading > a {
+    color: inherit;
+    text-decoration: none; }
+
 @media (min-width: 769px) {
   .colGrid {
     display: flex;
@@ -183,11 +247,25 @@ p {
 .header {
   background: #000; }
   .header__topBar {
-    padding: 2rem;
-    font-size: 1.8rem;
-    font-weight: 700;
     background: #fcd700;
     text-align: center; }
+    .header__topBar--inner {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      @media (min-width: 769px) {
+        .header__topBar--inner {
+          flex-direction: row;
+          align-items: center; } }
+    .header__topBar > span {
+      display: inline-block;
+      padding: 2rem;
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: #000; }
+      .header__topBar > span > a {
+        color: inherit;
+        text-decoration: none; }
   .header__main {
     position: relative;
     margin: 0 auto;
@@ -204,14 +282,18 @@ p {
         max-width: 100%; }
   .header__nav {
     display: none;
-    margin: 2rem 0 0; }
+    position: absolute;
+    padding: 2rem 0;
+    left: 0;
+    right: 0;
+    background: #000; }
     @media (min-width: 769px) {
       .header__nav {
-        display: block;
-        position: absolute;
+        display: block !important;
+        left: auto;
         right: 5rem;
+        padding: 0;
         top: 50%;
-        margin-top: 0;
         transform: translateY(-50%); } }
     .header__nav__item {
       display: block;
@@ -220,7 +302,11 @@ p {
       color: #fcd700;
       text-align: center;
       text-decoration: none;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none; }
   .header .hamburgerBtn {
     position: absolute;
     right: 3rem;
@@ -229,6 +315,7 @@ p {
     height: 3rem;
     transform: translateY(-50%); }
     .header .hamburgerBtn::before {
+      transition: all 0.3s;
       content: '';
       position: absolute;
       display: block;
@@ -238,6 +325,7 @@ p {
       background: #fcd700;
       top: 0; }
     .header .hamburgerBtn::after {
+      transition: all 0.3s;
       content: '';
       position: absolute;
       display: block;
@@ -253,6 +341,15 @@ p {
     @media (min-width: 769px) {
       .header .hamburgerBtn {
         display: none; } }
+    .header .hamburgerBtn--xMode::before {
+      top: 50%;
+      transform: rotate(45deg); }
+    .header .hamburgerBtn--xMode::after {
+      top: 50%;
+      bottom: auto;
+      transform: rotate(-45deg); }
+    .header .hamburgerBtn--xMode > .hamburgerBtn__bar {
+      opacity: 0; }
     .header .hamburgerBtn__bar {
       position: absolute;
       display: block;
@@ -261,7 +358,9 @@ p {
       width: 100%;
       height: 0.5rem;
       background: #fcd700;
-      transform: translateY(-50%); }
+      opacity: 1;
+      transform: translateY(-50%);
+      transition: all 0.3s; }
 
 .hero {
   display: flex;
@@ -271,12 +370,13 @@ p {
   background-size: cover; }
   .hero__content {
     margin: auto;
-    padding: 0 6.5rem;
+    padding: 0 2.5rem;
     width: 100%;
     max-width: 117rem;
     text-align: center; }
     @media (min-width: 769px) {
       .hero__content {
+        padding: 0 6.5rem;
         text-align: left; } }
   .hero__text {
     display: block;
@@ -301,12 +401,23 @@ p {
 .btn {
   display: inline-block;
   padding: 0 2rem;
+  height: 6rem;
   font-size: 2rem;
   font-weight: 700;
   line-height: 6rem;
-  height: 6rem;
+  color: #000;
   background: #fcd700;
-  text-transform: uppercase; }
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all .3s; }
+  .btn:hover {
+    color: #fcd700;
+    background: #000; }
+  .btn--alt {
+    background: #fff; }
+    .btn--alt:hover {
+      color: #fcd700;
+      background: #000; }
 
 .beforeAfter {
   margin: 6rem 0; }
@@ -349,5 +460,160 @@ p {
     line-height: 1.375em;
     color: #fff;
     background: rgba(35, 31, 32, 0.5); }
+
+@media (min-width: 769px) {
+  .about {
+    display: flex; } }
+.about__image {
+  margin: 0 auto 2rem;
+  width: 50%;
+  max-width: 29.3rem; }
+  @media (min-width: 769px) {
+    .about__image {
+      flex-basis: 29.3rem;
+      display: flex; }
+      .about__image > img {
+        align-self: center; } }
+  .about__image > img {
+    display: block;
+    max-width: 100%; }
+@media (min-width: 769px) {
+  .about__content {
+    flex: 1;
+    padding-left: 7rem; } }
+.about__content > h2 {
+  text-align: center; }
+  @media (min-width: 769px) {
+    .about__content > h2 {
+      text-align: left; } }
+
+.modal {
+  margin: auto;
+  width: 45rem;
+  max-width: 90%;
+  color: #fff;
+  text-align: center; }
+  .modal__container {
+    display: flex;
+    position: fixed;
+    overflow: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.9);
+    opacity: 0;
+    transition: all .3s;
+    z-index: -1; }
+    .modal__container--visible {
+      opacity: 1;
+      z-index: 9999; }
+  .modal__closeBtn {
+    position: absolute;
+    display: block;
+    top: 2rem;
+    right: 2rem;
+    width: 3rem;
+    height: 3rem; }
+    .modal__closeBtn:hover {
+      cursor: pointer; }
+    .modal__closeBtn::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      height: 0.1rem;
+      background: #fcd700;
+      transform: rotate(45deg); }
+    .modal__closeBtn::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      height: 0.1rem;
+      background: #fcd700;
+      transform: rotate(-45deg); }
+
+.footer {
+  padding: 4rem 0;
+  background: #000;
+  text-align: center; }
+  .footer__logo {
+    display: block;
+    margin: 0 auto 2.5rem;
+    width: 20.3rem;
+    height: 9rem;
+    background: url(img/footer-logo.png) no-repeat center; }
+  .footer__links {
+    list-style-type: none;
+    padding: 0;
+    text-align: center; }
+    .footer__links > li {
+      position: relative;
+      display: block;
+      margin-bottom: 1rem;
+      font-size: 2.3rem;
+      font-weight: 700;
+      color: #fff; }
+      @media (min-width: 769px) {
+        .footer__links > li {
+          display: inline-block;
+          margin-bottom: 0; }
+          .footer__links > li:not(:first-child) {
+            margin-left: 1rem;
+            padding-left: 2rem; }
+            .footer__links > li:not(:first-child)::before {
+              content: '•';
+              position: absolute;
+              left: 0; } }
+      .footer__links > li > a {
+        color: inherit;
+        text-decoration: none;
+        transition: all 0.3s; }
+        .footer__links > li > a:hover {
+          opacity: .8; }
+
+.photoSlider {
+  padding: 0; }
+  .photoSlider > li > img {
+    display: block; }
+
+.regList {
+  margin: 2rem 0;
+  padding: 0;
+  list-style-position: inside; }
+  .regList__item {
+    font-size: 1.7rem;
+    line-height: 1.3em; }
+  .regList--customBullet {
+    list-style-type: none; }
+    .regList--customBullet > .regList__item {
+      position: relative;
+      padding-left: 1rem; }
+      .regList--customBullet > .regList__item::before {
+        content: '•';
+        position: absolute;
+        left: 0; }
+
+.regColList {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-align: left; }
+  .regColList__item {
+    position: relative;
+    margin-bottom: 1.5rem;
+    padding-left: 2rem;
+    flex-basis: 50%;
+    font-size: 1.6rem;
+    color: #fff; }
+    .regColList__item::before {
+      content: '•';
+      position: absolute;
+      left: 0; }
 
 /*# sourceMappingURL=main.css.map */
