--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -2,11 +2,32 @@
     background: $black;
 
     &__topBar {
-        padding: 2rem;
-        font-size: 1.8rem;
-        font-weight: 700;
         background: $school-bus-yellow;
         text-align: center;
+
+        &--inner {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            @include bp(SM) {
+                flex-direction: row;
+                align-items: center;
+            }
+        }
+
+        & > span {
+            display: inline-block;
+            padding: 2rem;
+            font-size: 1.8rem;
+            font-weight: 700;
+            color: $black;
+
+            & > a {
+                color: inherit;
+                text-decoration: none;
+            }
+        }
     }
 
     &__main {
@@ -33,14 +54,18 @@
 
     &__nav {
         display: none;
-        margin: 2rem 0 0;
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        right: 0;
+        background: $black;
 
         @include bp(SM) {
-            display: block;
-            position: absolute;
+            display: block !important;
+            left: auto;
             right: 5rem;
+            padding: 0;
             top: 50%;
-            margin-top: 0;
             transform: translateY(-50%); 
         }
 
@@ -52,6 +77,10 @@
             text-align: center;
             text-decoration: none;
             text-transform: uppercase;
+            webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
     }
 
@@ -64,10 +93,12 @@
         transform: translateY(-50%);
 
         &::before {
+            @include transition();
             @include button-bar();
         }
 
         &::after {
+            @include transition();
             @include button-bar(bottom);
         }
 
@@ -79,6 +110,23 @@
             display: none;
         }
 
+        &--xMode {
+            &::before {
+                top: 50%;
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                top: 50%;
+                bottom: auto;
+                transform: rotate(-45deg);
+            }
+
+            & > .hamburgerBtn__bar {
+                opacity: 0;
+            }
+        }
+
         &__bar {
             position: absolute;
             display: block;
@@ -87,7 +135,9 @@
             width: 100%;
             height: 0.5rem;
             background: $school-bus-yellow;
+            opacity: 1;
             transform: translateY(-50%);
+            @include transition();
         }
     }
 }
